Edits to news summary items

--- a/2024/2024-04-07.md
+++ b/2024/2024-04-07.md
@@ -10,7 +10,7 @@ Firms are proposing new instruments that either integrate blockchain technology 
 
 The latest:
 
-- **The Securities and Exchange Commission** opened a public comment period Tuesday for proposals by Grayscale, Bitwise, and Fidelity to offer [ETFs that hold ether](https://www.theblock.co/post/286255/sec-asks-for-public-comment-for-grayscale-bitwise-and-fidelity-spot-ethereum-etfs), the crypto market's number-two token. Some analysts are worried, however, that such funds might face additional regulatory hurdles due to the Ethereum network's staking system, which offers token holders bond-like yield paid in ether tokens. [Reuters reports](https://www.reuters.com/technology/cryptoverse-ether-fettered-by-fate-spot-etf-proposals-2024-04-02/) that worries about ETF approval may be holding ether's price performance in check lately. It's up more than 50% so far this year -- about 10 percentage points bitcoin less than bitcoin's return.
+- **The Securities and Exchange Commission** opened a public comment period Tuesday for proposals by Grayscale, Bitwise, and Fidelity to offer [ETFs that hold ether](https://www.theblock.co/post/286255/sec-asks-for-public-comment-for-grayscale-bitwise-and-fidelity-spot-ethereum-etfs), the crypto market's number-two token. Some analysts worry that such funds might face additional regulatory hurdles due to the Ethereum network's staking system, which offers token holders bond-like yield paid in ether tokens. [Reuters reports](https://www.reuters.com/technology/cryptoverse-ether-fettered-by-fate-spot-etf-proposals-2024-04-02/) that worries about ETF approval may be holding ether's price performance in check lately. It's up more than 50% so far this year -- about 10 percentage points bitcoin less than bitcoin's return.
 
 - **BlackRock,** already a [major player](https://decrypt.co/224524/bitcoin-etf-blackrock-flip-grayscale) in the bitcoin ETF market, is pushing ahead with plans to launch an Ethereum-based platform to [tokenize real-world assets](https://finance.yahoo.com/news/blackrock-enters-asset-tokenization-race-233701485.html) such as real estate and artwork as well. The CEO of the new project, dubbed Securitize, tells Forbes that BlackRock aims to [tokenize $10 trillion](https://www.forbes.com/sites/nataliakarayaneva/2024/03/21/blackrocks-10-trillion-tokenization-vision-the-future-of-real-world-assets/?sh=463e106e535c) in assets, enabling them to be traded on-chain.
 
@@ -24,67 +24,23 @@ Happily, the week also saw a lot of notable tech-related news away from Wall Str
 
 ### Week in Review: March 31 to April 6, 2024
 
-- **Meta's experiments** in augmented and virtual reality have lost $40 billion since the company changed its name from Facebook. However, the company still posted record profits in its latest quarterly reports due to income from a more familiar source -- sellig ads against user-generated content on its social platforms. ([Cointelegraph](https://cointelegraph.com/news/meta-metaverse-lab-lost-40-b-since-facebook-changed-its-name-in-2021))
+- **Meta's experiments** in augmented and virtual reality have lost $40 billion since the company changed its name from Facebook. However, the company still posted record profits in its latest quarterly report due to income from a more familiar source -- sellig ads against user-generated content on its social platforms. ([Cointelegraph](https://cointelegraph.com/news/meta-metaverse-lab-lost-40-b-since-facebook-changed-its-name-in-2021))
 
-- https://www.ccn.com/news/chinese-public-blockchain-belt-road-initiative/ | https://watcher.guru/news/brics-china-unveils-blockchain-project-to-end-us-dollar-in-trade
+- **The data startup Vana** launched a new platform to allow Reddit users to put their personal information on-chain and vote on what to do with it collectively. ([The Block](https://www.theblock.co/post/286311/paradigm-backed-startup-vana-launches-dao-letting-reddit-users-control-their-personal-data))
 
-- https://www.coinspeaker.com/us-states-cardano-foundation-blockchain-voting-platform/
+- **The Bank for International Settlements** announced it has partnered with seven major central banks on Project Agora, which will explore asset tokenization within the conventional financial system. The initiative may also facilitate cross-border payments in different nations' official digital currencies. ([Cointelegraph](https://cointelegraph.com/news/bis-7-central-banks-explore-asset-tokenization-project-agora)
 
-- **Coachella is integrating NFTs.** | https://decrypt.co/224551/coachella-avalanche-nft-quests-game-music-festival | https://decrypt.co/224523/billie-eilish-nicki-minaj-pearl-jam-protest-ai-in-music | https://venturebeat.com/games/coachella-and-avalanche-create-web3-loyalty-game-for-coachella-quests/
+- **Cardano Foundation CEO Frederik Gregaard** said in [an interview](https://twitter.com/StakeWithPride/status/1773433637960372317) with the news site Daily Coin that several U.S. states have approached his organization about using the Cardano chain to improve election transparency.
 
-- **Trouble among the exchanges:** https://decrypt.co/224602/nigeria-working-with-interpol-to-extradite-binance-exec-who-escaped-detention-report | https://www.axios.com/2024/04/0/changpeng-zhao-binance-sentencing-cryptocurrency | Investors are fleeing KuCoin. https://decrypt.co/224654/crypto-investors-flee-kucoin-criminal-conspiracy-charges
-
-- https://www.theblock.co/post/286311/paradigm-backed-startup-vana-launches-dao-letting-reddit-users-control-their-personal-data
-
-- <!-- From NYT: An A.I. Researcher Takes On Election Deepfakes: Oren Etzioni was once an optimist about artificial intelligence. Now, his nonprofit, TrueMedia.org, is offering tools for fighting A.I.-manipulated content. --> https://www.nytimes.com/2024/04/02/technology/an-ai-researcher-takes-on-election-deepfakes.html
-
-- **Memecoin coverage:** https://www.coingecko.com/research/publications/most-profitable-crypto-narratives | https://blockworks.co/news/crypto-leaders-insist-on-memecoin-utility
-
-<!-- Candidates -->
-
-- https://cointelegraph.com/news/bis-7-central-banks-explore-asset-tokenization-project-agora
-
-- https://www.coindesk.com/consensus-magazine/2024/04/03/for-crypto-the-global-regulatory-olympics-has-already-begun/
-
-- https://decrypt.co/224581/ark-invests-bitcoin-etf-sees-87-million-net-outflows-overtaking-gbtc
-
-- https://slate.com/news-and-politics/2024/04/tiktok-ban-update-trump-senate-campaign-donors.html
-
-- https://www.coindesk.com/business/2024/04/03/cathie-wood-attributes-bitcoins-rise-to-national-currency-devaluations/
-
-- https://cointelegraph.com/magazine/phishing-crypto-erc-20-bait-scammers/
-
-- https://cointelegraph.com/news/24-million-staked-sol-stuck-lido-smart-contract-bug
-
-- https://prospect.org/politics/2024-04-03-staying-power-crypto-political-machine/
-
-- https://www.coindesk.com/markets/2024/04/03/are-you-too-late-to-crypto/
-
-- https://decrypt.co/224670/how-much-shib-shiba-inu-founder-ryoshi-hold
-
-- https://www.theblock.co/post/286291/solana-zeus-network-funding-token-valuation
-
-- https://www.theblock.co/post/286267/minecraft-inspired-crypto-game-hytopia-launching-beta-after-8-million-node-sale
-
-- https://www.forbes.com/sites/digital-assets/2024/04/02/how-ai-and-blockchain-can-revolutionize-the-internet-as-we-know-it/?sh=a69a5f42d692
-
-- https://www.forbes.com/sites/nimrodlehavi/2024/04/03/the-hackers-are-back--defi-needs-to-be-ready-to-defend-itself/?sh=67397b273dc6
-
-
-- https://coingape.com/ai-integration-and-blockchain-to-propel-web3-adoption/
-
-- https://slate.com/human-interest/2024/04/yearly-tuition-hike-colleges-universities-yale-boston.html
-
-- https://www.nytimes.com/2024/04/03/technology/personaltech/iphone-android-ios-apple.html
-
+- **The New York Times profiled** researcher Oren Etzioni, who founded the nonprofit TrueMedia to offer tools to [combat AI-based manipulation](https://www.nytimes.com/2024/04/02/technology/an-ai-researcher-takes-on-election-deepfakes.html) of election information.
 
 ### Odds & Ends
 
-- https://decrypt.co/224081/the-winners-circle-is-bringing-horse-racing-to-a-new-generation-of-web3-fans
+- **Faruk Fatih Özera,** who stole $2 billion in tokens from a Turkish crypto exchange where he was CEO, was sentenced to 11,196 years in prison by a court in Istanbul. Wow. ([Wired](https://www.wired.com/story/faruk-ozer-turkey-crypto-fraud/))
 
-- https://www.salon.com/2024/04/04/they-decided-to-get-even-with-him-revenge-against-julian-assange-broke-the-media/
+- **Coachella is integrating non-fungible tokens** (NFTs) into this year's music festival, taking place the next two weekends in Southern California. Through a [partnership with Avalanche](https://venturebeat.com/games/coachella-and-avalanche-create-web3-loyalty-game-for-coachella-quests/), fans will be able to play a web3 game and earn NFT rewards tied into the festival.
 
-- **Yikes.** https://www.wired.com/story/faruk-ozer-turkey-crypto-fraud/
+- **Now is also a good time to mention:** Coachella will be broadcast live and in full beginning Friday, April 12, via several streams on their [official YouTube channel](https://www.youtube.com/@Coachella) covering each performance space. You're welcome. ☺️
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
