Adding early, early links to candidates for 4/14

--- a/2024/2024-04-14.md
+++ b/2024/2024-04-14.md
@@ -1,25 +1,3 @@
-<!--
-
-Draft social posts...
-
-https://slate.com/human-interest/2024/03/insomnia-cures-drug-free-sleeplessness-lewis-carroll-book.html
-
-https://www.nasdaq.com/articles/why-blockchain-technology-is-the-future-of-supply-chain-and-vendor-management
-
-https://slate.com/business/2024/03/supporting-parents-financially-generational-wealth.html
-
-https://bettermarketing.pub/youre-wasting-your-time-posting-daily-on-linkedin-6c7b1337bcdf
-
-https://stanfordbinettest.com/
-
-https://www.vogue.com/article/joan-didion-self-respect-essay-1961
-
-https://decrypt.co/224081/the-winners-circle-is-bringing-horse-racing-to-a-new-generation-of-web3-fans
-
-https://www.salon.com/2024/04/04/they-decided-to-get-even-with-him-revenge-against-julian-assange-broke-the-media/
-
--->
-
 # tktktktktk
 ## tktktktk
 
@@ -28,23 +6,15 @@ https://www.salon.com/2024/04/04/they-decided-to-get-even-with-him-revenge-again
 
 <!-- Lede item. Should run ~450 words.
 
-Some possibilities:
+Some (mostly) evergreen possibilities below. Remember to clean up WIPlist in Notion, store ideas here for the newsletter as you go...
+
+- DIMON: The JPMorgan CEO's recent comments on inflation and interest rates closely echoes that of most bitcoiners, believe it or not. https://www.wsj.com/finance/jamie-dimon-warns-u-s-might-face-interest-rate-spike-83789da7?st=2rm5usg8ofxy8ow&reflink=desktopwebshare_permalink
+
+- HALVING: It's imminent. Do a preview.
 
 - HOMEBIAS: Does it exist in tech, as in the stock market?
 
 - AI: Interesecting with crypto. Focus on how the interesection of AI and crypto is shaping up, with good, bad and inbetween examples.
-
-- SVDISRUPTION: Why should Big Tech be immune to the pattern of disruption it's brought to other industries? All its players are decades-old incumbents, subject to all the forces of stagnation we've seen elsewhere.
-
-  Founding dates and ages of the Magnificent 7 by year-end 2024:
-
-  - Microsoft: 1975   49
-  - Apple: 1976       48
-  - Nvidia: 1993      31
-  - Amazon: 1994      30
-  - Alphabet: 1998    26
-  - Tesla: 2003       21
-  - Meta: 2004        20
 
 -->
 
@@ -52,14 +22,49 @@ Some possibilities:
 
 <!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
 
-- tk
-- tk
-- tk
+- New Bloomberg doc on the bitcoin halving. <!-- Need link... -->
+
+- Do Kwon update? <!-- A possibility/reminder here. Update this one briefly if there are developments -->
+
+- New U.S. inflation data. <!-- Due out Wednesday -->
+
+- https://www.wsj.com/business/autos/tesla-fatal-autopilot-crash-trial-33936b42?st=ktftbtecyjcw1zv&reflink=desktopwebshare_permalink
+
+- https://www.wsj.com/tech/ai/social-order-could-collapse-in-ai-era-two-top-japan-companies-say-1a71cc1d?st=vj62gzszmggdufs&reflink=desktopwebshare_permalink
+
+- https://www.wsj.com/finance/stocks/nasdaq-bull-run-breadth-8601b027?st=ws6kyf2detg13ba&reflink=desktopwebshare_permalink
+
+- https://www.wsj.com/tech/ai/social-order-could-collapse-in-ai-era-two-top-japan-companies-say-1a71cc1d?st=042xuzmh6dl5kk3&reflink=desktopwebshare_permalink
 
 ### Odds & Ends
 
-- tk
-- tk
+- https://www.washingtonpost.com/business/interactive/2024/good-bad-economy-quiz-wages-inflation/
+
+- **At last.** Modern DNA testing helped the U.S. government identify the remains of a Black veteran who died at Pearl Harbor in 1941. <!-- Flesh out. --> https://www.washingtonpost.com/history/2024/04/09/black-pearl-harbor-sailor-identified/
+
+<!-- Some leftovers here. These are unlikely for the newsletter tbh. But they will at least make for interesting reading and, perhaps, social posts or odds & ends items. -->
+
+- https://www.washingtonpost.com/world/2024/04/05/haiti-gangs-american-guns/
+
+- https://www.wsj.com/business/telecom/starlink-musk-ukraine-russia-sudan-satellite-communications-technology-f4fc79d9
+
+- https://slate.com/human-interest/2024/03/insomnia-cures-drug-free-sleeplessness-lewis-carroll-book.html
+
+- https://www.nasdaq.com/articles/why-blockchain-technology-is-the-future-of-supply-chain-and-vendor-management
+s
+- https://slate.com/business/2024/03/supporting-parents-financially-generational-wealth.html
+
+- https://bettermarketing.pub/youre-wasting-your-time-posting-daily-on-linkedin-6c7b1337bcdf
+
+- https://stanfordbinettest.com/
+
+- https://www.vogue.com/article/joan-didion-self-respect-essay-1961
+
+- https://decrypt.co/224081/the-winners-circle-is-bringing-horse-racing-to-a-new-generation-of-web3-fans
+
+- https://www.wsj.com/business/media/paramount-faces-a-mountain-of-distrust-16502584
+
+- https://www.salon.com/2024/04/04/they-decided-to-get-even-with-him-revenge-against-julian-assange-broke-the-media/
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
