Fleshing out early draft for 14 Apr

--- a/2024/2024-04-14.md
+++ b/2024/2024-04-14.md
@@ -6,65 +6,59 @@
 
 <!-- Lede item. Should run ~450 words.
 
-Some (mostly) evergreen possibilities below. Remember to clean up WIPlist in Notion, store ideas here for the newsletter as you go...
+DIMON: The JPMorgan CEO's recent comments on inflation and interest rates closely echoes that of most bitcoiners, believe it or not.
 
-- DIMON: The JPMorgan CEO's recent comments on inflation and interest rates closely echoes that of most bitcoiners, believe it or not. https://www.wsj.com/finance/jamie-dimon-warns-u-s-might-face-interest-rate-spike-83789da7?st=2rm5usg8ofxy8ow&reflink=desktopwebshare_permalink
+- WSJ coverage of Dimon's letter. https://www.wsj.com/finance/jamie-dimon-warns-u-s-might-face-interest-rate-spike-83789da7?st=2rm5usg8ofxy8ow&reflink=desktopwebshare_permalink
 
-- HALVING: It's imminent. Do a preview.
+- Full letter: https://reports.jpmorganchase.com/investor-relations/2023/ar-ceo-letters.htm
 
-- HOMEBIAS: Does it exist in tech, as in the stock market?
+- New CPI data Wednesday: Need link.
 
-- AI: Interesecting with crypto. Focus on how the interesection of AI and crypto is shaping up, with good, bad and inbetween examples.
+- Commodity prices are sending possible inflationary signals: https://www.wsj.com/finance/commodities-futures/commodities-rally-reflects-a-better-economy-but-also-poses-inflation-risks-1e81e723?st=oq78wsl9u9e8g1a&reflink=desktopwebshare_permalink
 
 -->
 
 ### Week in Review: April 7-13, 2024
 
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
+- **The Securities and Exchange Commission** sent a Wells notice to Uniswap. https://qz.com/sec-crypto-exchange-uniswap-wells-notice-bitcoin-1851401789 | https://blog.uniswap.org/fighting-for-defi | https://decrypt.co/225774/uniswap-uni-token-price-drop-sec-wells-notice
 
-- New Bloomberg doc on the bitcoin halving. <!-- Need link... -->
+- **Halving update:** New Bloomberg doc is out <!-- Need link... --> | https://decrypt.co/225927/bitcoin-mining-difficulty-all-time-high-halving
 
-- Do Kwon update? <!-- A possibility/reminder here. Update this one briefly if there are developments -->
+- **Do Kwon update:** https://www.msn.com/en-us/money/other/terraform-labs-owner-do-kwon-found-liable-for-defrauding-crypto-investors-out-of-40-billion/ar-BB1llMZg | https://www.reuters.com/legal/terraform-labs-make-final-pitch-jury-civil-fraud-trial-wraps-2024-04-05/
 
-- New U.S. inflation data. <!-- Due out Wednesday -->
+- **Adobe is buying videos** to train an AI model. <!-- Need link -->
+
+- https://www.theblock.co/post/287892/former-ftx-ceo-sam-bankman-fried-appeals-conviction-and-sentence
+
+- https://www.theblock.co/post/287842/circle-launches-usdc-smart-contract-support-for-blackrock-buidl-holders
+
+- https://www.reuters.com/markets/currencies/crypto-survey-shows-less-consumer-scepticism-third-expect-bitcoin-price-fall-2024-04-08/
+
+- https://www.wsj.com/articles/top-crypto-exchanges-look-to-move-beyond-settlements-with-u-s-regulators-fddbeb29?st=h926g3ngfw4pm7l&reflink=desktopwebshare_permalink
+
+- https://www.coindesk.com/business/2024/04/09/pompliano-ex-journo-melinek-spin-up-token-relations-startup-for-blockchain-firms/
 
 - https://www.wsj.com/business/autos/tesla-fatal-autopilot-crash-trial-33936b42?st=ktftbtecyjcw1zv&reflink=desktopwebshare_permalink
 
-- https://www.wsj.com/tech/ai/social-order-could-collapse-in-ai-era-two-top-japan-companies-say-1a71cc1d?st=vj62gzszmggdufs&reflink=desktopwebshare_permalink
+- https://cointelegraph.com/news/dfinity-launches-web3-accelerator-platform-internet-computer
+
+- https://www.coindesk.com/business/2024/04/08/defi-firm-1inch-introduces-web3-debit-card-in-partnership-with-mastercard-and-baanx/
 
 - https://www.wsj.com/finance/stocks/nasdaq-bull-run-breadth-8601b027?st=ws6kyf2detg13ba&reflink=desktopwebshare_permalink
 
+- https://www.wsj.com/business/telecom/starlink-musk-ukraine-russia-sudan-satellite-communications-technology-f4fc79d9
+
 - https://www.wsj.com/tech/ai/social-order-could-collapse-in-ai-era-two-top-japan-companies-say-1a71cc1d?st=042xuzmh6dl5kk3&reflink=desktopwebshare_permalink
+
+- https://www.axios.com/2024/04/11/crypto-adidas-gaming-partnership
 
 ### Odds & Ends
 
-- https://www.washingtonpost.com/business/interactive/2024/good-bad-economy-quiz-wages-inflation/
-
 - **At last.** Modern DNA testing helped the U.S. government identify the remains of a Black veteran who died at Pearl Harbor in 1941. <!-- Flesh out. --> https://www.washingtonpost.com/history/2024/04/09/black-pearl-harbor-sailor-identified/
 
-<!-- Some leftovers here. These are unlikely for the newsletter tbh. But they will at least make for interesting reading and, perhaps, social posts or odds & ends items. -->
-
-- https://www.washingtonpost.com/world/2024/04/05/haiti-gangs-american-guns/
-
-- https://www.wsj.com/business/telecom/starlink-musk-ukraine-russia-sudan-satellite-communications-technology-f4fc79d9
-
-- https://slate.com/human-interest/2024/03/insomnia-cures-drug-free-sleeplessness-lewis-carroll-book.html
-
-- https://www.nasdaq.com/articles/why-blockchain-technology-is-the-future-of-supply-chain-and-vendor-management
-s
-- https://slate.com/business/2024/03/supporting-parents-financially-generational-wealth.html
-
-- https://bettermarketing.pub/youre-wasting-your-time-posting-daily-on-linkedin-6c7b1337bcdf
-
-- https://stanfordbinettest.com/
-
-- https://www.vogue.com/article/joan-didion-self-respect-essay-1961
-
-- https://decrypt.co/224081/the-winners-circle-is-bringing-horse-racing-to-a-new-generation-of-web3-fans
-
-- https://www.wsj.com/business/media/paramount-faces-a-mountain-of-distrust-16502584
-
 - https://www.salon.com/2024/04/04/they-decided-to-get-even-with-him-revenge-against-julian-assange-broke-the-media/
+
+- https://www.washingtonpost.com/business/interactive/2024/good-bad-economy-quiz-wages-inflation/
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
