fleshing out summary items

--- a/2024/2024-04-14.md
+++ b/2024/2024-04-14.md
@@ -20,9 +20,10 @@ DIMON: The JPMorgan CEO's recent comments on inflation and interest rates closel
 
 ### Week in Review: April 7-13, 2024
 
+- **The Bitcoin network's next "halving" is near,** expected [later in this week](https://www.theblock.co/post/288015/bitcoin-halving-countdown-one-week-to-go). Halvings are periodic events mandated in Bitcoin's programming to slow the issuance of new tokens, effectively limiting overall supply. Bets ahead of this halving have helped propel bitcoin to a gain of almost 60% so far in 2024. (By comparison, the S&P 500 stock index is up 7%.) But last week was an exception to that broader trend in bitcoin prices, as a [wave of selling Friday](https://www.coindesk.com/markets/2024/04/12/bitcoin-plunges-to-66k-altcoins-tumble-10-15-on-ugly-day-for-risk-assets/) left the token with a 7-day decline of 2% as of yesterday afternoon in New York.
+
 - **The Securities and Exchange Commission** sent a Wells notice to Uniswap. https://qz.com/sec-crypto-exchange-uniswap-wells-notice-bitcoin-1851401789 | https://blog.uniswap.org/fighting-for-defi | https://decrypt.co/225774/uniswap-uni-token-price-drop-sec-wells-notice
 
-- **Halving update:** New Bloomberg doc is out <!-- Need link... --> | https://decrypt.co/225927/bitcoin-mining-difficulty-all-time-high-halving
 
 - **Do Kwon update:** https://www.msn.com/en-us/money/other/terraform-labs-owner-do-kwon-found-liable-for-defrauding-crypto-investors-out-of-40-billion/ar-BB1llMZg | https://www.reuters.com/legal/terraform-labs-make-final-pitch-jury-civil-fraud-trial-wraps-2024-04-05/
 
