Edits to news summary

--- a/2024/2024-04-14.md
+++ b/2024/2024-04-14.md
@@ -20,22 +20,34 @@ DIMON: The JPMorgan CEO's recent comments on inflation and interest rates closel
 
 ### Week in Review: April 7-13, 2024
 
-- **The Bitcoin network's next "halving" is near,** expected [later in this week](https://www.theblock.co/post/288015/bitcoin-halving-countdown-one-week-to-go). Halvings are periodic events mandated in Bitcoin's programming to slow the issuance of new tokens, effectively limiting overall supply. Bets ahead of this halving have helped propel bitcoin to a gain of almost 60% so far in 2024. (By comparison, the S&P 500 stock index is up 7%.) But last week was an exception to that broader trend in bitcoin prices, as a [wave of selling Friday](https://www.coindesk.com/markets/2024/04/12/bitcoin-plunges-to-66k-altcoins-tumble-10-15-on-ugly-day-for-risk-assets/) left the token with a 7-day decline of 2% as of yesterday afternoon in New York.
+- **The Bitcoin network's next "halving" is near,** expected [late this week](https://www.theblock.co/post/288015/bitcoin-halving-countdown-one-week-to-go). Halvings are periodic events mandated in Bitcoin's programming to slow the issuance of new tokens, effectively limiting overall supply. Bets ahead of this halving have helped propel bitcoin to a gain of almost 60% so far in 2024. (By comparison, the S&P 500 stock index is up 7%.) But last week was an exception to that broader trend in bitcoin prices, as a [wave of selling Friday](https://www.coindesk.com/markets/2024/04/12/bitcoin-plunges-to-66k-altcoins-tumble-10-15-on-ugly-day-for-risk-assets/) left the token in the red. It posted a 7-day decline of 2% as of yesterday afternoon in New York.
 
-- **The Securities and Exchange Commission** sent a Wells notice to Uniswap. https://qz.com/sec-crypto-exchange-uniswap-wells-notice-bitcoin-1851401789 | https://blog.uniswap.org/fighting-for-defi | https://decrypt.co/225774/uniswap-uni-token-price-drop-sec-wells-notice
+- **The Securities and Exchange Commission** sent a notice to Uniswap on Wednesday that the popular decentralized finance (DeFi) platform may soon be the subject of an enforcement action. ([Quartz](https://qz.com/sec-crypto-exchange-uniswap-wells-notice-bitcoin-1851401789))
+
+- **Stablecoin issuer Circle** launched smart-contract support for asset-management giant BlockRock's new platform for tokenizing real-world assets. The move means it will be easier for investors to exchange dollar-based value on the new platform in exchange for real estate, art, or other tokenized assets. ([The Block](https://www.theblock.co/post/287842/circle-launches-usdc-smart-contract-support-for-blackrock-buidl-holders))  
+
+- **A new survey published by Deutsche Bank** on Monday showed consumers are becoming somewhat less sceptical about bitcoin, though almost one-third of respondents expect its price to drop sharply at some point this year. ([Reuters](https://www.reuters.com/markets/currencies/crypto-survey-shows-less-consumer-scepticism-third-expect-bitcoin-price-fall-2024-04-08/))
+
+- **FTX founder Sam Bankman-Fried filed an appeal** of his recent criminal conviction in New York on federal fraud charges, as well as his 35-year jail sentence. ([The Block](https://www.theblock.co/post/287892/former-ftx-ceo-sam-bankman-fried-appeals-conviction-and-sentence))
 
 
-- **Do Kwon update:** https://www.msn.com/en-us/money/other/terraform-labs-owner-do-kwon-found-liable-for-defrauding-crypto-investors-out-of-40-billion/ar-BB1llMZg | https://www.reuters.com/legal/terraform-labs-make-final-pitch-jury-civil-fraud-trial-wraps-2024-04-05/
 
-- **Adobe is buying videos** to train an AI model. <!-- Need link -->
 
-- https://www.theblock.co/post/287892/former-ftx-ceo-sam-bankman-fried-appeals-conviction-and-sentence
+<!--
 
-- https://www.theblock.co/post/287842/circle-launches-usdc-smart-contract-support-for-blackrock-buidl-holders
 
-- https://www.reuters.com/markets/currencies/crypto-survey-shows-less-consumer-scepticism-third-expect-bitcoin-price-fall-2024-04-08/
+- **Adobe is buying videos** to train an AI model. <!-- Need link
+
+
+
 
 - https://www.wsj.com/articles/top-crypto-exchanges-look-to-move-beyond-settlements-with-u-s-regulators-fddbeb29?st=h926g3ngfw4pm7l&reflink=desktopwebshare_permalink
+
+
+
+
+
+
 
 - https://www.coindesk.com/business/2024/04/09/pompliano-ex-journo-melinek-spin-up-token-relations-startup-for-blockchain-firms/
 
@@ -53,13 +65,15 @@ DIMON: The JPMorgan CEO's recent comments on inflation and interest rates closel
 
 - https://www.axios.com/2024/04/11/crypto-adidas-gaming-partnership
 
+-->
+
 ### Odds & Ends
 
-- **At last.** Modern DNA testing helped the U.S. government identify the remains of a Black veteran who died at Pearl Harbor in 1941. <!-- Flesh out. --> https://www.washingtonpost.com/history/2024/04/09/black-pearl-harbor-sailor-identified/
+- **After more than 80 years,** modern DNA testing has allowed the U.S. Department of Defense to identify the remains of David Walker, a Black sailor who died in the attack at Pearl Harbor in 1941. Mr. Walker's story is emblematic of the more than 50 African-American mess attendants, cooks, and stewards who died at Pearl Harbor at a time when the U.S. military was still segregated. ([Washington Post](https://www.washingtonpost.com/history/2024/04/09/black-pearl-harbor-sailor-identified/))
 
-- https://www.salon.com/2024/04/04/they-decided-to-get-even-with-him-revenge-against-julian-assange-broke-the-media/
+- **Salon columnist David Karem** argues that the U.S. government's prosecution of WikiLeaks founder Julian Assange, begun under Trump and continuing under Biden, signals that both major American political parties' commitment to free speech and free press is [waning dangerously](https://www.salon.com/2024/04/04/they-decided-to-get-even-with-him-revenge-against-julian-assange-broke-the-media/).
 
-- https://www.washingtonpost.com/business/interactive/2024/good-bad-economy-quiz-wages-inflation/
+- **The Washington Post published** a handy [interactive quiz](https://www.washingtonpost.com/business/interactive/2024/good-bad-economy-quiz-wages-inflation/) to help readers compare what they would like the U.S. economy to look like versus the reality reflected in actual data.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
