Edits to summary

--- a/2024/2024-04-14.md
+++ b/2024/2024-04-14.md
@@ -26,46 +26,17 @@ DIMON: The JPMorgan CEO's recent comments on inflation and interest rates closel
 
 - **Stablecoin issuer Circle** launched smart-contract support for asset-management giant BlockRock's new platform for tokenizing real-world assets. The move means it will be easier for investors to exchange dollar-based value on the new platform in exchange for real estate, art, or other tokenized assets. ([The Block](https://www.theblock.co/post/287842/circle-launches-usdc-smart-contract-support-for-blackrock-buidl-holders))  
 
-- **A new survey published by Deutsche Bank** on Monday showed consumers are becoming somewhat less sceptical about bitcoin, though almost one-third of respondents expect its price to drop sharply at some point this year. ([Reuters](https://www.reuters.com/markets/currencies/crypto-survey-shows-less-consumer-scepticism-third-expect-bitcoin-price-fall-2024-04-08/))
+- **A new survey published by Deutsche Bank** on Monday showed consumers are becoming somewhat less skeptical about bitcoin's long-term potential as an asset class and payment mechanism. However, almost one-third of respondents said they expect its price to drop sharply at some point in 2024. ([Reuters](https://www.reuters.com/markets/currencies/crypto-survey-shows-less-consumer-scepticism-third-expect-bitcoin-price-fall-2024-04-08/))
 
 - **FTX founder Sam Bankman-Fried filed an appeal** of his recent criminal conviction in New York on federal fraud charges, as well as his 35-year jail sentence. ([The Block](https://www.theblock.co/post/287892/former-ftx-ceo-sam-bankman-fried-appeals-conviction-and-sentence))
 
-
-
-
-<!--
-
-
-- **Adobe is buying videos** to train an AI model. <!-- Need link
-
-
-
-
-- https://www.wsj.com/articles/top-crypto-exchanges-look-to-move-beyond-settlements-with-u-s-regulators-fddbeb29?st=h926g3ngfw4pm7l&reflink=desktopwebshare_permalink
-
-
-
-
-
-
+- https://cointelegraph.com/news/dfinity-launches-web3-accelerator-platform-internet-computer
 
 - https://www.coindesk.com/business/2024/04/09/pompliano-ex-journo-melinek-spin-up-token-relations-startup-for-blockchain-firms/
 
-- https://www.wsj.com/business/autos/tesla-fatal-autopilot-crash-trial-33936b42?st=ktftbtecyjcw1zv&reflink=desktopwebshare_permalink
-
-- https://cointelegraph.com/news/dfinity-launches-web3-accelerator-platform-internet-computer
-
-- https://www.coindesk.com/business/2024/04/08/defi-firm-1inch-introduces-web3-debit-card-in-partnership-with-mastercard-and-baanx/
-
-- https://www.wsj.com/finance/stocks/nasdaq-bull-run-breadth-8601b027?st=ws6kyf2detg13ba&reflink=desktopwebshare_permalink
-
-- https://www.wsj.com/business/telecom/starlink-musk-ukraine-russia-sudan-satellite-communications-technology-f4fc79d9
-
-- https://www.wsj.com/tech/ai/social-order-could-collapse-in-ai-era-two-top-japan-companies-say-1a71cc1d?st=042xuzmh6dl5kk3&reflink=desktopwebshare_permalink
-
 - https://www.axios.com/2024/04/11/crypto-adidas-gaming-partnership
 
--->
+- https://www.wsj.com/finance/stocks/nasdaq-bull-run-breadth-8601b027?st=ws6kyf2detg13ba&reflink=desktopwebshare_permalink
 
 ### Odds & Ends
 
