--- a/2024/2024-04-14.md
+++ b/2024/2024-04-14.md
@@ -30,13 +30,13 @@ DIMON: The JPMorgan CEO's recent comments on inflation and interest rates closel
 
 - **FTX founder Sam Bankman-Fried filed an appeal** of his recent criminal conviction in New York on federal fraud charges, as well as his 35-year jail sentence. ([The Block](https://www.theblock.co/post/287892/former-ftx-ceo-sam-bankman-fried-appeals-conviction-and-sentence))
 
-- https://cointelegraph.com/news/dfinity-launches-web3-accelerator-platform-internet-computer
+- Dfinity, a key contributor to the Internet Computer blockchain, has launched the Olympus Acceleration Platform, a decentralized, on-chain Web3 accelerator. This first-of-its-kind platform, supported by $15 million in funding, allows teams worldwide to create their own accelerator programs. The platform's "Open Stake" model facilitates permissionless ecosystem inclusivity and integration. Backed by the Internet Computer Protocol, Olympus boasts a "trustless perpetual loop" for verifying project growth metrics. The initiative is supported by a consortium of investors and venture capital funds, including Fenbushi Capital and Softbank Vision Fund. https://cointelegraph.com/news/dfinity-launches-web3-accelerator-platform-internet-computer
 
-- https://www.coindesk.com/business/2024/04/09/pompliano-ex-journo-melinek-spin-up-token-relations-startup-for-blockchain-firms/
+- Crypto entrepreneurs Anthony Pompliano and Jacquelyn Melinek have launched Token Relations, a new communications startup aimed at blockchain firms. Token Relations will provide a direct path for companies to communicate with their stakeholders about metrics, milestones, and product launches, offering a "third bucket" of information that's separate from marketing and PR. The startup aims to address the unique challenges of crypto communications, where stakeholders have financial, career-focused, and cultural interests, and information is often lost in the black box of social media algorithms. https://www.coindesk.com/business/2024/04/09/pompliano-ex-journo-melinek-spin-up-token-relations-startup-for-blockchain-firms/
 
-- https://www.axios.com/2024/04/11/crypto-adidas-gaming-partnership
+- In a recent development, Adidas has collaborated with the crypto game "Crypto: The Game," offering unique tracksuit-skins for in-game advantages in their Survivor-inspired tournament. This partnership signifies a growing interest from major brands in web3 companies, indicating that the stigma around the sector may be fading. Meanwhile, the South Carolina-Iowa women's NCAA title game reached a record-breaking 18.7 million viewers, highlighting the increasing popularity of women's sports. Lastly, tensions have escalated between Iran and Israel following a retaliatory attack from Iran after an airstrike in Syria. https://www.axios.com/2024/04/11/crypto-adidas-gaming-partnership
 
-- https://www.wsj.com/finance/stocks/nasdaq-bull-run-breadth-8601b027?st=ws6kyf2detg13ba&reflink=desktopwebshare_permalink
+- The article highlights concerns about the narrowing breadth of the current Nasdaq bull run, suggesting that the index's gains are largely driven by a few megacap tech stocks, known as the 'Magnificent Seven'. This concentration of gains could indicate investor reluctance towards smaller stocks and potentially signal a shaky foundation for the rally. Despite the Nasdaq hitting record highs, the advance-decline line, a measure of market breadth, has been trending lower since January, indicating fewer stocks participating in the upturn. However, the article notes that this doesn't necessarily mean the rally is over, but rather a signal for investors to stay vigilant and monitor market breadth to gauge underlying market sentiment. https://www.wsj.com/finance/stocks/nasdaq-bull-run-breadth-8601b027?st=6mgtsdd73lasmjx&reflink=desktopwebshare_permalink
 
 ### Odds & Ends
 
