Fleshing out lead item

--- a/2024/2024-04-14.md
+++ b/2024/2024-04-14.md
@@ -1,41 +1,22 @@
-# At last, some common ground between Dimon and bitcoiners
+# Some unexpected common ground between Dimon and bitcoiners
 ## tktktktk
 
 ![]()
 *Photo by tk via tk*
 
-**JPMorgan CEO Jamie Dimon** surprised many colleagues and investors last week by fretting about [a possible resurgence of inflation](https://www.wsj.com/finance/jamie-dimon-warns-u-s-might-face-interest-rate-spike-83789da7?st=ez2fgov0m0m4wye&reflink=desktopwebshare_permalink) in the U.S., along with higher interest rates from the Federal Reserve.
+**JPMorgan CEO Jamie Dimon** surprised many colleagues and investors last week by fretting about [a possible resurgence of inflation](https://www.wsj.com/finance/jamie-dimon-warns-u-s-might-face-interest-rate-spike-83789da7?st=ez2fgov0m0m4wye&reflink=desktopwebshare_permalink) and official interest rates in the U.S.
 
-Coming into 2024, we were supposed to be past such worries. Everyone in the financial industry was eagerly anticipating Fed cuts, not hikes. But that might have been premature, according to Wall Street's biggest fish.
+Coming into 2024, we were supposed to be past such worries. Everyone in the financial industry was eagerly anticipating rate cuts, not hikes, from the Federal Reserve. But that all might have been premature, according to Wall Street's biggest fish.
 
 In his [annual letter](https://reports.jpmorganchase.com/investor-relations/2023/ar-ceo-letters.htm) to JPMorgan shareholders, Dimon writes:
 
 *There is too much emphasis on short-term, monthly data and too little on long-term trends and on what might happen in the future that would influence long-term outcomes. For example, today there is tremendous interest in monthly inflation data, although it seems to me that every long-term trend I see increases inflation relative to the last 20 years. Huge fiscal spending, the trillions needed each year for the green economy, the remilitarization of the world and the restructuring of global trade — all are inflationary. I’m not sure models could pick this up. And you must use judgment if you want to evaluate impacts like these.*
 
-Funny thing is, this economic diagnosis is pretty much same one you would hear from many bitcoiners -- a group Dimon has often [been at odds](https://finance.yahoo.com/news/jamie-dimon-tells-davos-bitcoin-172918767.html) with otherwise.
+Funny thing is, this macroeconomic diagnosis is pretty much same one you would hear from many bitcoiners -- a group Dimon has often [been at odds](https://finance.yahoo.com/news/jamie-dimon-tells-davos-bitcoin-172918767.html) with.
 
-Just to cite examples from one widely followed bitcoin news source: You can hear concerns similar to Dimon's about mounting U.S. spending, debt, and inflation from guests on Peter McCormack's podcast [here](https://www.whatbitcoindid.com/podcast/repricing-the-world-in-bitcoin), [here](https://www.whatbitcoindid.com/podcast/2024-the-year-of-the-bitcoin-bull), [here](https://www.whatbitcoindid.com/podcast/the-debt-tsunami), and [here](https://www.whatbitcoindid.com/podcast/macro-fed-pivot-bitcoin), all at least two months before Dimon's letter.
+Just to cite some examples from one widely followed bitcoin news source: You can hear concerns similar to Dimon's about mounting U.S. spending, debt, and inflation from guests on Peter McCormack's podcast [here](https://www.whatbitcoindid.com/podcast/repricing-the-world-in-bitcoin), [here](https://www.whatbitcoindid.com/podcast/2024-the-year-of-the-bitcoin-bull), [here](https://www.whatbitcoindid.com/podcast/the-debt-tsunami), and [here](https://www.whatbitcoindid.com/podcast/macro-fed-pivot-bitcoin), all at least two months before Dimon published his letter.
 
-
-
-
-
-
-
-
-<!-- Lede item. Should run ~450 words.
-
-DIMON: The JPMorgan CEO's recent comments on inflation and interest rates closely echoes that of most bitcoiners, believe it or not.
-
-- WSJ coverage of Dimon's letter. https://www.wsj.com/finance/jamie-dimon-warns-u-s-might-face-interest-rate-spike-83789da7?st=2rm5usg8ofxy8ow&reflink=desktopwebshare_permalink
-
-- Full letter: https://reports.jpmorganchase.com/investor-relations/2023/ar-ceo-letters.htm
-
-- New CPI data Wednesday: Need link.
-
-- Commodity prices are sending possible inflationary signals: https://www.wsj.com/finance/commodities-futures/commodities-rally-reflects-a-better-economy-but-also-poses-inflation-risks-1e81e723?st=oq78wsl9u9e8g1a&reflink=desktopwebshare_permalink
-
--->
+Of course, he would still disagree vehemently with such folks about what investors should *do* about inflation risk, particularly whether buying bitcoin is the answer. But perhaps he (and the rest of us) should at least be a little more reticent to paint them as crackpots.
 
 ### Week in Review: April 7-13, 2024
 
