--- a/2024/2024-04-14.md
+++ b/2024/2024-04-14.md
@@ -1,8 +1,8 @@
 # Some unexpected common ground between Dimon and bitcoiners
 ## tktktktk
 
-![]()
-*Photo by tk via tk*
+![](https://upload.wikimedia.org/wikipedia/commons/3/3f/Jamie_Dimon%2C_CEO_of_JPMorgan_Chase.jpg)
+*File photo of JPMorgan CEO Jamie Dimon. Photo by Steve Jurvetson via Wikimedia Commons*
 
 **JPMorgan CEO Jamie Dimon** surprised many colleagues and investors last week by fretting about [a possible resurgence of inflation](https://www.wsj.com/finance/jamie-dimon-warns-u-s-might-face-interest-rate-spike-83789da7?st=ez2fgov0m0m4wye&reflink=desktopwebshare_permalink) and official interest rates in the U.S.
 
@@ -12,7 +12,7 @@ In his [annual letter](https://reports.jpmorganchase.com/investor-relations/2023
 
 *There is too much emphasis on short-term, monthly data and too little on long-term trends and on what might happen in the future that would influence long-term outcomes. For example, today there is tremendous interest in monthly inflation data, although it seems to me that every long-term trend I see increases inflation relative to the last 20 years. Huge fiscal spending, the trillions needed each year for the green economy, the remilitarization of the world and the restructuring of global trade — all are inflationary. I’m not sure models could pick this up. And you must use judgment if you want to evaluate impacts like these.*
 
-Funny thing is, this macroeconomic diagnosis is pretty much same one you would hear from many bitcoiners -- a group Dimon has often [been at odds](https://finance.yahoo.com/news/jamie-dimon-tells-davos-bitcoin-172918767.html) with.
+Funny thing is, this macroeconomic diagnosis is pretty much the same one you would hear from many bitcoiners -- a group Dimon has often [been at odds](https://finance.yahoo.com/news/jamie-dimon-tells-davos-bitcoin-172918767.html) with.
 
 Just to cite some examples from one widely followed bitcoin news source: You can hear concerns similar to Dimon's about mounting U.S. spending, debt, and inflation from guests on Peter McCormack's podcast [here](https://www.whatbitcoindid.com/podcast/repricing-the-world-in-bitcoin), [here](https://www.whatbitcoindid.com/podcast/2024-the-year-of-the-bitcoin-bull), [here](https://www.whatbitcoindid.com/podcast/the-debt-tsunami), and [here](https://www.whatbitcoindid.com/podcast/macro-fed-pivot-bitcoin), all at least two months before Dimon published his letter.
 
